--- a/Módulo 9 - Funciones/Módulo9Katas.ipynb
+++ b/Módulo 9 - Funciones/Módulo9Katas.ipynb
@@ -29,11 +29,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Función para leer 3 tanques de combustible y muestre el promedio\n"
+        "# Función para leer 3 tanques de combustible y muestre el promedio\n",
+        "def leer_tanques_y_promedio(tanque1, tanque2, tanque3):\n",
+        "    prom_tanques = (tanque1 + tanque2+ tanque3)/3\n",
+        "    return f'''\n",
+        "            ---REPORTE TANQUES---\n",
+        "            Tanque 1: {tanque1}\n",
+        "            Tanque 2: {tanque2}\n",
+        "            Tanque 3: {tanque3}\n",
+        "            El promedio de las lecturas es: {prom_tanques}\n",
+        "            '''\n",
+        "        \n",
+        "        "
       ]
     },
     {
@@ -45,12 +56,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "            ---REPORTE TANQUES---\n",
+            "            Tanque 1: 50\n",
+            "            Tanque 2: 25\n",
+            "            Tanque 3: 75\n",
+            "            El promedio de las lecturas es: 50.0\n",
+            "            \n"
+          ]
+        }
+      ],
       "source": [
-        "\n",
-        "# Llamamos a la función que genera el reporte print(funcion(tanque1, tanque2, tanque3))"
+        "# Llamamos a la función que genera el reporte print(funcion(tanque1, tanque2, tanque3))\n",
+        "print(leer_tanques_y_promedio(50, 25, 75))"
       ]
     },
     {
@@ -62,11 +87,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Función promedio "
+        "# Función promedio \n",
+        "def promedio(lista):\n",
+        "    suma = 0\n",
+        "    for elemento in lista:\n",
+        "        suma += elemento\n",
+        "    return suma / len(lista)\n",
+        "        "
       ]
     },
     {
@@ -78,11 +109,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Actualiza la función"
+        "# Actualiza la función\n",
+        "def leer_tanques_y_promedio(tanque1, tanque2, tanque3):\n",
+        "    prom_tanques = promedio([tanque1, tanque2, tanque3])\n",
+        "    return f'''\n",
+        "            ---REPORTE TANQUES---\n",
+        "            Tanque 1: {tanque1}\n",
+        "            Tanque 2: {tanque2}\n",
+        "            Tanque 3: {tanque3}\n",
+        "            El promedio de las lecturas es: {prom_tanques}\n",
+        "            '''"
       ]
     },
     {
@@ -109,11 +149,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Función con un informe preciso de la misión. Considera hora de prelanzamiento, tiempo de vuelo, destino, tanque externo y tanque interno"
+        "# Función con un informe preciso de la misión. Considera hora de prelanzamiento, tiempo de vuelo, destino, tanque externo y tanque interno\n",
+        "def informe_mision(hora, tiempo_vuelo, destino, tanque_externo, tanque_interno):\n",
+        "    print(f'''INFORME DE LA MISIÓN\n",
+        "            Hora de prelanzamiento: {hora} horas\n",
+        "            Tiempo de vuelo:        {tiempo_vuelo} horas\n",
+        "            Destino:                {destino}\n",
+        "            Tanque externo:         {tanque_externo} L\n",
+        "            Tanque interno:         {tanque_interno} L\n",
+        "            ''')\n",
+        "    \n",
+        "informe_mision(3, 15.5, 'Marte', 2000, 1500)"
       ]
     },
     {
@@ -125,11 +175,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "INFORME DE LA MISIÓN\n",
+            "            Hora de prelanzamiento: 14 horas\n",
+            "            Tiempo de vuelo:        85 horas\n",
+            "            Destino:                Marte\n",
+            "            Tanques para la misión: 3\n",
+            "            Combustible restante:   10777 L\n",
+            "            \n"
+          ]
+        }
+      ],
       "source": [
-        "# Escribe tu nueva función de reporte considerando lo anterior"
+        "# Escribe tu nueva función de reporte considerando lo anterior\n",
+        "def informe_mision(hora, *minutos, destino, **tanques):\n",
+        "    print(f'''INFORME DE LA MISIÓN\n",
+        "            Hora de prelanzamiento: {hora} horas\n",
+        "            Tiempo de vuelo:        {sum(minutos)} horas\n",
+        "            Destino:                {destino}\n",
+        "            Tanques para la misión: {len(tanques)}\n",
+        "            Combustible restante:   {sum(tanques.values())} L\n",
+        "            ''')  \n",
+        "    \n",
+        "informe_mision(14, 25, 44, 16, destino='Marte', reserva=2000, tanque_principal=7777, extra=1000)"
       ]
     },
     {
@@ -141,11 +215,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "INFORME DE LA MISIÓN\n",
+            "            Hora de prelanzamiento: 14 horas\n",
+            "            Tiempo de vuelo:        85 horas\n",
+            "            Destino:                Marte\n",
+            "            Tanques para la misión: 3\n",
+            "            Combustible restante:   10777 L\n",
+            "            \n",
+            "Tanque: reserva tiene \t2000 L\n",
+            "Tanque: tanque_principal tiene \t7777 L\n",
+            "Tanque: extra tiene \t1000 L\n"
+          ]
+        }
+      ],
       "source": [
-        "# Escribe tu nueva función"
+        "# Escribe tu nueva función\n",
+        "# Escribe tu nueva función de reporte considerando lo anterior\n",
+        "def informe_mision(hora, *minutos, destino, **tanques):\n",
+        "    print(f'''INFORME DE LA MISIÓN\n",
+        "            Hora de prelanzamiento: {hora} horas\n",
+        "            Tiempo de vuelo:        {sum(minutos)} horas\n",
+        "            Destino:                {destino}\n",
+        "            Tanques para la misión: {len(tanques)}\n",
+        "            Combustible restante:   {sum(tanques.values())} L\n",
+        "            ''')  \n",
+        "    for key in tanques.keys():\n",
+        "        print(f'Tanque: {key} tiene {tanques[key]} L')\n",
+        "    \n",
+        "informe_mision(14, 25, 44, 16, destino='Marte', reserva=2000, tanque_principal=7777, extra=1000)"
       ]
     },
     {
@@ -270,9 +374,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Mission to Moon\n",
+            "    Total travel time: 74 minutes\n",
+            "    Total fuel left: 500000\n",
+            "    main tank --> 300000 gallons left\n",
+            "external tank --> 200000 gallons left\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Escribe tu nueva función\n",
         "\n",
@@ -324,7 +442,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
