--- a/Módulo 8 - Administrar datos con diccionarios/Módulo8Katas.ipynb
+++ b/Módulo 8 - Administrar datos con diccionarios/Módulo8Katas.ipynb
@@ -40,11 +40,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Crea un diccionario llamado planet con los datos propuestos"
+        "# Crea un diccionario llamado planet con los datos propuestos\n",
+        "planet = {\n",
+        "    'name': 'Mars',\n",
+        "    'moons': 2\n",
+        "}"
       ]
     },
     {
@@ -56,11 +60,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The planet Mars has 2 moons\n"
+          ]
+        }
+      ],
       "source": [
-        "# Muestra el nombre del planeta y el número de lunas que tiene."
+        "# Muestra el nombre del planeta y el número de lunas que tiene.\n",
+        "print(f\"The planet {planet['name']} has {planet['moons']} moons\")"
       ]
     },
     {
@@ -84,11 +97,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Agrega la clave circunferencia con los datos proporcionados previamente"
+        "# Agrega la clave circunferencia con los datos proporcionados previamente\n",
+        "planet['circunference (km)'] = {\n",
+        "    'polar': 6752,\n",
+        "    'equatorial': 6792\n",
+        "}"
       ]
     },
     {
@@ -99,12 +116,26 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The planet Mars has a polar circunference of: 6752\n"
+          ]
+        }
+      ],
       "source": [
-        "# Imprime el nombre del planeta con su circunferencia polar."
+        "# Imprime el nombre del planeta con su circunferencia polar.\n",
+        "print(f\"The planet {planet['name']} has a polar circunference of: {planet['circunference (km)']['polar']}\")"
       ]
     },
     {
@@ -131,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -164,11 +195,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Añade el código para determinar el número de lunas."
+        "# Añade el código para determinar el número de lunas.\n",
+        "moons = planet_moons.values()\n",
+        "planets = len(planet_moons)"
       ]
     },
     {
@@ -180,11 +213,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The total number of moons is 214 and the average per 12 planets is 17.833333333333332\n"
+          ]
+        }
+      ],
       "source": [
-        "# Agrega el código para contar el número de lunas. "
+        "# Agrega el código para contar el número de lunas. \n",
+        "total_moons = 0\n",
+        "for value in moons:\n",
+        "    total_moons += value\n",
+        "average_moons = total_moons / planets\n",
+        "print(f\"The total number of moons is {total_moons} and the average per {planets} planets is {average_moons}\")"
       ]
     },
     {
@@ -330,7 +376,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
