fix: version equivocada de kata1, corregido

--- a/Módulo 1 - Primeros pasos/Modulo1Katas.ipynb
+++ b/Módulo 1 - Primeros pasos/Modulo1Katas.ipynb
@@ -21,21 +21,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Today's date is: \n"
+            "Hoy es: 2022-02-13\n"
           ]
         }
       ],
       "source": [
         "from datetime import date\n",
-        "\n",
-        "print(\"Today's date is: \")"
+        "hoy = date.today()\n",
+        "print(\"Hoy es:\",str(hoy))"
       ]
     },
     {
@@ -54,14 +54,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "11 parsec, is 35.87716 lightyears\n"
+            "11 parsecs son 35.87716 años luz\n"
           ]
         }
       ],
@@ -70,7 +70,7 @@
         "\n",
         "lightyears = parsec * 3.26156\n",
         "\n",
-        "print(str(parsec) + \" parsec, is \" + str(round(lightyears,5)) + \" lightyears\")"
+        "print(str(parsec) + \" parsecs son \" + str(round(lightyears,5)) + \" años luz\")"
       ]
     },
     {
